Update .gitignore to exclude __pycache__ directories; add orfipy dependency in pyproject.toml; refactor imports and optimize code in various modules for clarity and performance.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "nbformat",     # Jupyter notebook support
     "ipywidgets",   # Jupyter notebook support
     "umap-learn",   # Dimensionality reduction
+    "orfipy",       # ORF prediction
 ]
 
 [project.scripts]
