Refactor RoPE layer and add tests
Support partial rotary embeddings via a new rotational_fraction and
rotary_dimension. Rework buffer initialization and caching (device-aware
reset_parameters and _compute_trigonometric_caches), add
_apply_partial_rotary_embedding, rotate_input and update forward. Add
unit tests for initialization, relative rotational covariance and output
shapes. Update .gitignore to ignore common hidden directories (.venv,
.env, .idea, .vscode, .zed, .cache).

--- a/.gitignore
+++ b/.gitignore
@@ -7,17 +7,8 @@ temp/
 # Ignore dataset files
 data/
 
-# Ignore model files
-saved_models/
-
 # Ignore logs
 logs/
-
-# Ignore virtual environment
-.venv/
-
-# Ignore IDE specific files
-.vscode/
 
 # Build files
 build/
@@ -27,3 +18,11 @@ build/
 
 # __pycache__ directories
 __pycache__/
+
+# All hidden directories and their contents
+.venv/
+.env/
+.idea/
+.vscode/
+.zed
+.cache/
