Add ruff and pytest configs, remove Black
Configure ruff with line-length=88, indent-width=4, lint select
E4,E7,E9,F and formatting options (docstring-code-format=true,
quote-style="double"). Add pytest ini options to run tests in tests/
with addopts '--maxfail=5 --disable-warnings -q'.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,9 +42,25 @@ where = ["src"]
 exclude = ["temp*", "tests*"]
 
 [project.optional-dependencies]
-dev = ["black", "ruff", "pytest"]
+dev = ["ruff", "pytest"]
 docs = ["sphinx", "sphinx-rtd-theme", "sphinx-autodoc-typehints", "myst-parser"]
 
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.ruff]
+line-length = 88
+indent-width = 4
+
+[tool.ruff.lint]
+select = ["E4", "E7", "E9", "F"]
+
+[tool.ruff.format]
+docstring-code-format = true
+quote-style = "double"
+
+# Pytest in the tests/ directory and subdirectories
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+addopts = "--maxfail=5 --disable-warnings -q"
